syntax = "proto3";
package NetworkMessages;
import "google/protobuf/any.proto";

enum MessageType {
	NONE = 0;
	HANDSHAKE = 1;
	CHAT = 2;
}

message GameMessage
{
	uint64 sender = 1;
	uint64 sendTime = 2;
	uint64 sendTick = 3;
	bool toServer = 4;
	bool broadcast = 5;
	uint64 targetUser = 6;
	MessageType type = 7;
	google.protobuf.Any payload = 8;
}


message HandshakeMessage
{
	string message = 3;
	string payload = 4;
}

message ChatMessage
{
	string message = 2;
}

message Vec3
{
	float X = 1;
	float Y = 2;
	float Z = 3;
}